Added model and Api