@@ -1,10 +1,10 @@
 package com.example.routeoptilib.services;
 
+import com.example.routeoptilib.models.Cabby;
 import com.example.routeoptilib.utils.Constant;
 import com.moveinsync.MisBuidUtils;
 import com.moveinsync.ets.models.Duty;
 import com.moveinsync.tripsheet.models.TripsheetDTOV2;
-import com.moveinsync.vehiclemanagementservice.models.DriverMapping;
 import com.moveinsync.vehiclemanagementservice.models.VehicleDTO;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
@@ -19,6 +19,7 @@ import org.springframework.web.client.RestClientException;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.web.util.UriComponentsBuilder;
 
+import java.util.Collections;
 import java.util.List;
 
 @Service
@@ -51,29 +52,29 @@ public class ExternalApiService {
         }
     }
     
-    public List<DriverMapping> getDriverData(List<String> buIds) {
-        
-        String url = UriComponentsBuilder.fromHttpUrl(vmsApiUrl + "/driver-details")
-                .queryParam("buIds", String.join(",", buIds))
-                .toUriString();
+    public List<Cabby> getDriverData(String buid) {
+        String url = String.format("%s%s", MisBuidUtils.getUrlOfBuid(buid), "ets/apis/cabbies");
         
         HttpHeaders headers = new HttpHeaders();
-        headers.set(Constant.X_WIS_TOKEN, Constant.X_WIS_STATIC_TOKEN);
+        headers.setContentType(MediaType.APPLICATION_JSON);
+        headers.set(Constant.X_MIS_TOKEN, xMisTokenEts);
         
         HttpEntity<String> entity = new HttpEntity<>(headers);
         
         try {
-            ResponseEntity<List<DriverMapping>> response = restTemplate.exchange(
+            ResponseEntity<List<Cabby>> response = restTemplate.exchange(
                     url,
                     HttpMethod.GET,
                     entity,
-                    new ParameterizedTypeReference<>() {}
+                    new ParameterizedTypeReference<>() {
+                    }
             );
-            return response.getBody() != null ? response.getBody() : List.of();
-        } catch (Exception e) {
-            return List.of();
+            return response.getBody();
+        } catch (RestClientException e) {
+            return Collections.emptyList();
         }
     }
+
     
     public List<TripsheetDTOV2> getVehicleTripsForTheDay(String vehicleRegistration, long startTimestampOfDay, long endTimestampOfDay) {
         String url = UriComponentsBuilder.fromHttpUrl(tripsheetServiceApiUrl)
